# avs

./: .appveyor.yml  .dockerignore  CMakeLists.txt  Dockerfile  Pipfile  README.md  collector.py  schema.sql  server.py
chrome-extension/: contentScript.js  manifest.json
client/: package-lock.json  package.json
client/assets/js/: index.js
client/assets/js/components/: application.vue  index.vue  main.vue  stat.vue
client/webpack/: dev.config.js  prod.config.js
cmake-modules/: FindOrcania.cmake
src/: README.md  db.c  db.h  endpoints.c  endpoints.h  main.c  opts.c  opts.h  version.h.in
static/: api.yaml  index.html
